microservices/categories/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: categories-svc

spec:
  selector:
    app: meetup-categories
  
  type: ClusterIP
  ports:
    - name: categories-svc
      port: 4000
      targetPort: 4000
      protocol: TCP
